@@ -5,17 +5,18 @@
     
 <specification class="tutorial.portal.Stocks">
 
+<bean name="rowClass" class="com.primix.tapestry.inspector.EvenOdd"/>
+
 <component id="content" type="Block"/>
 
 <component id="e" type="Foreach">
   <binding name="source" property-path="stocks"/>
   <binding name="value" property-path="stock"/>
-  <binding name="index" property-path="index"/>
 </component>
 
 <component id="evenOdd" type="Any">
 	<static-binding name="element">tr</static-binding>
-	<binding name="class" property-path="rowClass"/>
+	<binding name="class" property-path="beans.rowClass.next"/>
 </component>
 
 <component id="insertStock" type="Insert">
