@@ -1,4 +1,7 @@
 <!-- $Id$ -->
 <span jwcid="$content$">
 <a href="#" class="clsDataBlue" jwcid="link"><span jwcid="insertBookTitle"/></a>
+<span jwcid="ifNew">
+<img src="images/new.gif" width="27" height="12" border="0" alt="[New]">
+</span>
 </span>
